# pocket_warehouse

./: .gitignore  Dockerfile  LICENSE  README.md  backup_infer.py  compose.yaml  pyproject.toml  requirements.txt
control/: arm.py
hotwheels_triage/: orchestrator.py  schemas.py  triage.py
pocket_warehouse.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
tests/: test_triage.py
vision/: capture.py  infer.py  label_map.txt  model_int8.tflite
