[project]
name = "pocket-warehouse"
version = "0.1.0"
requires-python = ">=3.11"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["hotwheels_triage*"]
exclude = ["tests*", "samples*", "robot*", "vision*"]
